tests/invalid/invalid-inline-comment.orgs
process InvalidInlineComment

  when lead.created # not supported
